package NotificationObserver;

interface Observer {
    public void update (String bookAvailability);
}
