@startuml

title __OBSERVERANDCOMMAND's Class Diagram__\n


      namespace ObserverAndCommand {
        class CommandSales.ObserverAndCommand.CheckSale {
            + CheckSaleOn : String
            - SaleType : String
            - observers : ArrayList<Observer>
            - sale : String
            + CheckSale()
            + getObservers()
            + getSale()
            + getSaleType()
            + notifyObservers()
            + registerObserver()
            + removeObserver()
            + setObservers()
            + setSale()
            + setSaleType()
        }
      }

      namespace ObserverAndCommand {
        class CommandSales.ObserverAndCommand.Observer {
            + update()
        }
      }

      namespace ObserverAndCommand {
        class CommandSales.ObserverAndCommand.Sale {
            ~ sale : String
            + Sale()
            + update()
        }
      }

      namespace ObserverAndCommand {
        interface CommandSales.ObserverAndCommand.Subject {
            {abstract} + notifyObservers()
            {abstract} + registerObserver()
            {abstract} + removeObserver()
        }
      }


  CommandSales.ObserverAndCommand.CheckSale .up.|> CommandSales.ObserverAndCommand.Subject
  CommandSales.ObserverAndCommand.CheckSale o-- CommandSales.ObserverAndCommand.Sale : sales
  CommandSales.ObserverAndCommand.Sale -up-|> CommandSales.ObserverAndCommand.Observer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
